--- a/stylesheet/hamburger.css
+++ b/stylesheet/hamburger.css
@@ -1,101 +1,123 @@
-#menu__toggle {
-  opacity: 0;
-}
-#menu__toggle:checked + .menu__btn > span {
-  transform: rotate(45deg);
-}
-#menu__toggle:checked + .menu__btn > span::before {
-  top: 0;
-  transform: rotate(0deg);
-}
-#menu__toggle:checked + .menu__btn > span::after {
-  top: 0;
-  transform: rotate(90deg);
-}
-#menu__toggle:checked ~ .menu__box {
-  right: 0 !important;
-}
-.menu__btn {
-  position: fixed;
-  top: 7%;
-  right: 20px;
-  width: 35px;
-  height: 35px;
-  cursor: pointer;
-  z-index: 9999;
-}
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 3px;
-  background-color: #616161;
-  transition-duration: .25s;
-}
-.menu__btn > span::before {
-  content: '';
-  top: -8px;
-}
-.menu__btn > span::after {
-  content: '';
-  top: 8px;
-}
-.menu__box {
-  display: block;
-  position: fixed;
-  top: 0;
-  right: -100%;
-  width: 60vw;
-  height: 100vh;
-  margin: 0;
-  padding: 80px 0;
-  list-style: none;
-  background-image: linear-gradient(to bottom, rgba(255,255,255,1), 90%, rgba(255,255,255,0));
-	opacity: 1;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
-  transition-duration: .25s;
-	z-index: 8888;
+@media (max-width:5480px){
+
+	#menu__toggle {
+	  opacity: 0;
+	}
+	#menu__toggle:checked + .menu__btn > span {
+	  transform: rotate(45deg);
+	}
+	#menu__toggle:checked + .menu__btn > span::before {
+	  top: 0;
+	  transform: rotate(0deg);
+	}
+	#menu__toggle:checked + .menu__btn > span::after {
+	  top: 0;
+	  transform: rotate(90deg);
+	}
+	#menu__toggle:checked ~ .menu__box {
+	  right: 0 !important;
+	}
+	.menu__btn {
+	  position: fixed;
+	  top: 7%;
+	  right: 20px;
+	  width: 35px;
+	  height: 35px;
+	  cursor: pointer;
+	  z-index: 9999;
+	}
+	.menu__btn > span,
+	.menu__btn > span::before,
+	.menu__btn > span::after {
+	  display: block;
+	  position: absolute;
+	  width: 100%;
+	  height: 3px;
+	  background-color: #616161;
+	  transition-duration: .25s;
+	}
+	.menu__btn > span::before {
+	  content: '';
+	  top: -8px;
+	}
+	.menu__btn > span::after {
+	  content: '';
+	  top: 8px;
+	}
+	.menu__box {
+	  display: block;
+	  position: fixed;
+	  top: 0;
+	  right: -100%;
+	  width: 60vw;
+	  height: 100vh;
+	  margin: 0;
+	  padding: 80px 0;
+	  list-style: none;
+	  background-image: linear-gradient(to bottom, rgba(255,255,255,1), 90%, rgba(255,255,255,0));
+		opacity: 1;
+	  box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+	  transition-duration: .25s;
+		z-index: 8888;
+	}
+
+	.menu__item {
+	  display: block;
+	  padding: 15px 24px;
+	  color: #333;
+	  font-family: 'Roboto', sans-serif;
+	  font-size: 18px;
+	  font-weight: 600;
+	  text-decoration: none;
+		border: 1px solid #efefef;
+		border-width: 1px 0px 1px 0px;
+	  transition-duration: .25s;
+	}
+
+
+
+	.menu__item-header {
+	  display: block;
+	  padding: 20px 24px;
+	  color: #009CC0;
+	  font-family: 'Roboto', sans-serif;
+	  font-size: 18px;
+	  font-weight: 400;
+	  text-decoration: none;
+	  transition-duration: .25s;
+	}
+
+	.menu__item-home {
+	  display: block;
+	  padding: 45px 24px 15px;
+	  color: lightcoral;
+	  font-family: 'Roboto', sans-serif;
+	  font-size: 14px;
+	  font-weight: 600;
+	  text-decoration: none;
+	  transition-duration: .25s;
+	}
+
+	.menu__item:hover {
+	  background-color: #CFD8DC;
+	}	
 }
 
-.menu__item {
-  display: block;
-  padding: 15px 24px;
-  color: #333;
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  font-weight: 600;
-  text-decoration: none;
-	border: 1px solid #efefef;
-	border-width: 1px 0px 1px 0px;
-  transition-duration: .25s;
-}
-
-
-
-.menu__item-header {
-  display: block;
-  padding: 20px 24px;
-  color: #009CC0;
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  text-decoration: none;
-  transition-duration: .25s;
-}
-
-.menu__item-home {
-  display: block;
-  padding: 45px 24px 15px;
-  color: lightcoral;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  font-weight: 600;
-  text-decoration: none;
-  transition-duration: .25s;
-}
-
-.menu__item:hover {
-  background-color: #CFD8DC;
+@media (max-width:5480px){
+	.menu__box {
+	  display: block;
+	  position: fixed;
+	  top: 0;
+	  right: -100%;
+	  width: 25vw;
+	  height: 100vh;
+	  margin: 0;
+	  padding: 80px 0;
+	  list-style: none;
+	  background-image: linear-gradient(to bottom, rgba(255,255,255,1), 90%, rgba(255,255,255,0));
+		opacity: 1;
+	  box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+	  transition-duration: .25s;
+		z-index: 8888;
+	}
 }
