--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -92,6 +92,8 @@ h4.facebook a:hover {
   bottom: 0%;
   width: 100vw;
   height: auto;
+  -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,.85)), to(rgba(0,0,0,1)));
+  mask-image: linear-gradient(to bottom, rgba(0,0,0,.85), rgba(0,0,0,1));
 }
 
 .totop {
