--- a/stylesheet/hamburger.css
+++ b/stylesheet/hamburger.css
@@ -20,7 +20,7 @@
 	.menu__btn {
 	  position: fixed;
 	  top: 7%;
-	  right: 20px;
+	  right: 3%;
 	  width: 35px;
 	  height: 35px;
 	  cursor: pointer;
@@ -49,7 +49,7 @@
 	  position: fixed;
 	  top: 0;
 	  right: -100%;
-	  width: 60vw;
+	  width: 23vw;
 	  height: 100vh;
 	  margin: 0;
 	  padding: 80px 0;
@@ -103,13 +103,13 @@
 	}	
 }
 
-@media (max-width:5480px){
+@media (max-width:800px){
 	.menu__box {
 	  display: block;
 	  position: fixed;
 	  top: 0;
 	  right: -100%;
-	  width: 25vw;
+	  width: 55vw;
 	  height: 100vh;
 	  margin: 0;
 	  padding: 80px 0;
@@ -119,5 +119,8 @@
 	  box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
 	  transition-duration: .25s;
 		z-index: 8888;
+	}
+	.menu__btn {
+	  right: 6%;
 	}
 }
