--- a/stylesheet/quote.css
+++ b/stylesheet/quote.css
@@ -35,30 +35,31 @@ p#hello, .i_believe{
 }
 
 .quote{
-  font-size: 4vw;
-  font-family: aller;
+  font-size: 2.5vw;
+  font-family: 'Merriweather', serif;
   line-height: 2.5;
-  width: 60%;
+  width: 75%;
   font-weight: bold;
   color: white;
   text-align: center;
 }
 
 .elon_musk{
-  font-size: 3vw;
-  font-family: aller;
+  font-size: 2.5vw;
+  font-family: 'Lato', sans-serif;
   line-height: 2.5;
-  padding: 5% 7% 0 0;
+  padding: 5% 1% 0 0;
   width: 100%;
-  font-weight: bold;
+  font-weight: lighter;
   color: white;
   text-align: right;
   text-shadow: none;
+  font-style: italic;
 }
 
 .container_relative{
   position: relative;
-  height: 100vh;
+  height: 85vh;
   width: 100vw;
 }
 
@@ -67,7 +68,7 @@ p#hello, .i_believe{
 }
 
 .quote.quotezero{
-    color: #fbff96;
+    color: #fffcc9;
     /*text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff2d95, 0 0 30px #ff2d95, 0 0 40px #ff2d95, 0 0 50px #ff2d95, 0 0 75px #ff2d95;*/
   }
 
@@ -123,7 +124,7 @@ p#hello, .i_believe{
 
 
 .quote.quotenone{
-  color: #fbff96;
+  color: #fffcc9;
 }
 
 .quotenone:before, .quotenone:after {
@@ -235,7 +236,7 @@ p#hello, .i_believe{
 }
 
 .quote.quotetwo{
-  color: #A2C523;
+  color: #c19a6b;
 }
 
 .quotetwo:before, .quotetwo:after {
@@ -396,10 +397,10 @@ p#hello, .i_believe{
 
 .sixtysix{
   position: absolute;
-  left: 20%;
+  left: 12%;
   top: 10px;
-  opacity: .2;
-  color: white;
+  opacity: .5;
+  color: #dcdcdc;
   font-size: 15vw;
   font-family: quotefont;
   text-shadow: none;
@@ -409,22 +410,22 @@ p#hello, .i_believe{
 
 @keyframes Sixtymoveupdown{
   0% {
-    top: 10px;
+    top: 20%;
   }
   50% {
-    top: 400px;
+    top: 50%;
   }
   100% {
-    top: 10px;
+    top: 20%;
   }
 }
 
 .ninetynine{
   position: absolute;
   bottom: 10px;
-  right: 20%;
-  opacity: .2;
-  color: white;
+  right: 12%;
+  opacity: .5;
+  color: #dcdcdc;
   font-size: 15vw;
   font-family: quotefont;
   text-shadow: none;
@@ -434,13 +435,13 @@ p#hello, .i_believe{
 
 @keyframes Ninetymoveupdown{
   0% {
-    bottom: 10px;
+    bottom: 25%;
   }
   50% {
-    bottom: 400px;
+    bottom: 50%;
   }
   100% {
-    bottom: 10px;
+    bottom: 25%;
   }
 }
 
@@ -450,5 +451,5 @@ p#hello, .i_believe{
   line-height: 1.5;
   padding-left: 5%;
   padding-right: 5%;
-  padding-top: 6%;
+  padding-bottom: 5%;
 }
