--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -19,7 +19,7 @@
   vertical-align: middle;
   width: 100%;
   height: 100px;
-  margin-top: -15%;
+  margin-top: 75%;
   zoom: 75%;
 }
 
@@ -86,15 +86,39 @@ h4.facebook a:hover {
 }
 
 .img_contact{
+  display: none;
   position: absolute;
   z-index: 0;
   opacity: .8;
   bottom: 0%;
   width: 100vw;
   height: auto;
-  -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,.85)), to(rgba(0,0,0,1)));
-  mask-image: linear-gradient(to bottom, rgba(0,0,0,.85), rgba(0,0,0,1));
+  -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,.8)));
+  mask-image: linear-gradient(10deg, rgba(0,0,0,.3), rgba(0,0,0,1));
 }
+
+
+.container_one.contactpage {
+  background: red;
+  background: -webkit-linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* Standard syntax */
+  animation: contactsky 20s infinite;
+}
+
+@keyframes contactsky{
+  0% {
+  filter: hue-rotate(0);
+	}
+  50% {
+  filter: hue-rotate(-.04turn);
+	}
+  100% {
+  filter: hue-rotate(0);
+	}
+}
+
 
 .totop {
 	 padding: 5px 3px;
@@ -110,7 +134,7 @@ h4.facebook a:hover {
     right: 5%;
     z-index: 8000;
     text-shadow: 0 0 3px black;
-	display:inherit;	
+	display:inherit;
     border-radius:50%;
     transition: all 1s;
 }
