--- a/stylesheet/hamburger.css
+++ b/stylesheet/hamburger.css
@@ -19,10 +19,10 @@
 	}
 	.menu__btn {
 	  position: fixed;
-	  top: 7%;
-	  right: 3%;
-	  width: 35px;
-	  height: 35px;
+	  top: 8%;
+	  right: 5%;
+	  width: 50px;
+	  height: 50px;
 	  cursor: pointer;
 	  z-index: 9999;
 	}
@@ -32,17 +32,18 @@
 	  display: block;
 	  position: absolute;
 	  width: 100%;
-	  height: 3px;
-	  background-color: #616161;
+	  height: 7px;
+	  background-color: #666666;
 	  transition-duration: .25s;
+    border-radius: 7px;
 	}
 	.menu__btn > span::before {
 	  content: '';
-	  top: -8px;
+	  top: -15px;
 	}
 	.menu__btn > span::after {
 	  content: '';
-	  top: 8px;
+	  top: 15px;
 	}
 	.menu__box {
 	  display: block;
@@ -100,7 +101,7 @@
 
 	.menu__item:hover {
 	  background-color: #CFD8DC;
-	}	
+	}
 }
 
 @media (max-width:800px){
