--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -8,22 +8,32 @@
 
 .portfolio_images-mobile {
 	display: none;
-}	
+}
 
 
 /*labtop*/
 @media (max-width:5480px){
 
   .container_one.intro{
-	  width: 100vw;
-	  height: 100vh;
+	  width: 80vw;
+	  height: 95vh;
+    margin-top: 12vh;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+    border-top: 20px solid #222222;
+    border-left: 20px solid #333333;
+    border-right: 20px solid #111111;
+    border-bottom: 20px solid #555555;
+
+
 	}
-	
+
 	.row.nut {
 		width: 90%;
 	}
-	
-	
+
+
   h1 a,
   h1 a:visited,
   h1 a:link,
@@ -115,6 +125,27 @@
     transform: translateZ(-17.5px) translateY(17.5px) rotateX(-90deg);
   }
 
+  .trapezoid {
+    display: inline-block;
+    overflow: hidden;
+    margin: 0 3em;
+    /**outline: solid 1px;/**/
+    width: 10em;
+    height: 8.66em;
+    transform: rotate(60deg) skewX(30deg);
+
+  }
+
+  .trapezoid:before {
+    display: block;
+    background: linear-gradient(#efefef, #aaaaaa, #666666, #dcdcdc);
+    content: '';
+   width: inherit; height: 50%;
+    transform: skewX(-30deg) rotate(-60deg) translate(-1.25em);
+
+  }
+
+
   .col-md-10{
     width:80%;
 	  padding-left: 7vw;
@@ -124,7 +155,7 @@
     width:100%;
   }
 
-  .hello{ 
+  .hello{
   color: white;
   font-size: 4vw;
   text-shadow: 2px 2px 10px black;
@@ -152,26 +183,26 @@
 
 .resume_prompt{
 }
-	
+
 .img_labtop{
 	zoom: 80%;
 	bottom: 10%;
 }
-	
-	
+
+
 .img_plant{
   bottom: 7%;
   left: 18%;
 	zoom: 80%;
 }
-	
+
 
   .medialabtopnone{
       display: inherit;
   }
 
   div.img_relative.labtop{
-    height: 150vh;
+    height: 75vh;
   }
 
   .carousel-inner{
@@ -180,7 +211,7 @@
     /*margin-left: 7.25%;*/
     padding: 0px;
   }
-	
+
  .carousel-inner.mobile{
     width: auto;
 	  height: 75vh;
@@ -189,7 +220,7 @@
   }
 
   .container_contacts{
-    zoom: 85%;
+    zoom: 50%;
   }
 
   h4.email a{
@@ -225,14 +256,14 @@
     margin: 2% auto 8% auto;
     width: 90%;
   }
-	
+
 	.portfolio_images {
 		display: inherit;
 	}
 
 	.portfolio_images-mobile {
 		display: none;
-	}	
+	}
 
 }
 
@@ -240,7 +271,7 @@
 /*ipad laptops*/
 
 @media (max-width:2024px){
-	
+
 	.row.nut {
 		width: 100%;
 	}
@@ -270,7 +301,7 @@
   }
 
   div.img_relative.labtop{
-    height: 150vh;
+    height: 75vh;
   }
 
   .col-md-10{
@@ -284,19 +315,19 @@
     padding-right: 10%;
   }
 
-	
+
 .img_plant {
 		zoom: 60%;
 		bottom: 20%;
 	}
-	
-	
+
+
 .img_labtop{
 		zoom: 60%;
 		bottom: 10%;
-	
+
 	}
-	
+
 
   .i_believe{
     padding-left: 5%;
@@ -351,15 +382,15 @@
 		zoom: 50%;
 		bottom: 7%;
 	}
-	
+
 	.img_plant{
 		zoom: 60%;
 		bottom: 15%;
 		left: 20%;
 	}
-	
+
 	  div.img_relative.labtop{
-    height: 150vh;
+    height: 75vh;
   }
 }
 
@@ -370,11 +401,11 @@
 
 	.portfolio_images {
 		display: none;
-	}	
-	
+	}
+
 	.portfolio_images-mobile {
 		display: inherit;
-	}	
+	}
 
   .ipad.displaynone{
     display: none;
@@ -402,7 +433,7 @@
 		zoom: 50%;
 	top: 50%;
 	}
-	
+
 .img_plant{
 		zoom: 50%;
 	left: 2%;
@@ -415,7 +446,7 @@
 		float: left;
 	}
 
-	
+
 .i_believe{
     padding-top: 2%;
     padding-left: 30%;
@@ -443,7 +474,7 @@
     overflow: hidden;
     display: block;
 	width: 100vw;
-	height: 105vh;	  
+	height: 105vh;
   }
 
   .container-fluid.ninetywidth{
@@ -457,7 +488,7 @@
   #carousel{
     overflow: hidden;
   }
-	
+
 	#carouselmobile{
     overflow: hidden;
   }
@@ -536,8 +567,8 @@
     vertical-align: middle;
 	width: 100vw;
     height: auto;
-  }	
-	
+  }
+
 .container_three{
     position: relative;
     display: flex;
@@ -547,8 +578,8 @@
     vertical-align: middle;
 	width: 45vw;
     height: 225px;
-  }	
-	
+  }
+
   .img_intrograss{
     position: absolute;
     z-index: 0;
@@ -580,10 +611,10 @@
     height: auto;
     animation: cloud2 100s linear;
 	}
-	
+
 @keyframes cloud2 {0% {left: -67vw;} 100% {left: 100vw;}}
 @-webkit-keyframes cloud2 {0% {left: -67vw;} 100% {left: 100vw;}}
-	
+
   .img_introcloud3{
     position: absolute;
     z-index: 0;
@@ -602,7 +633,7 @@
     font-size: 12vw;
     line-height: 1.15;
   }
-	
+
 	h1.edwinname {
     font-size: 12vw;
     line-height: 1.15;
@@ -629,17 +660,17 @@ h2.button-row{
     font-weight: bold;
     display: block;
 	width: 35vw;
-	margin-left: -5vw;  
+	margin-left: -5vw;
 	}
-	
+
 h2.button-row > a::before, h2.button-row > a::after{
 		width: 40vw;
 		}
 
 
-	
+
 div.img_relative.labtop{
-    height: 150vh;
+    height: 75vh;
   }
 
   p#hello{
@@ -665,7 +696,7 @@ div.img_relative.labtop{
     width: 150%;
 left: 1%;
 }
-	
+
   h4  a,
   h4  > a:visited,
   h4  > a:link,
@@ -676,7 +707,7 @@ left: 1%;
     text-transform: lowercase;
   }
 
-	
+
   .container_contacts{
 	position: relative;
     display: flex;
@@ -694,19 +725,19 @@ left: 1%;
 	 width: 100vw;
   }
 
-	
-	
+
+
 .sixtysix {
 	left: -1%;
 	font-size: 44vw;
 	}
-	
+
 .ninetynine {
 	right: -1%;
 	font-size: 44vw;
 	}
-	
-	
+
+
   .rendezlogo{
     margin-top: 2%;
     margin-bottom: 2%;
@@ -769,17 +800,17 @@ left: 1%;
  .rendeztake.take_me_there a:hover{
 	 display: none;}
 	 /*border: 1px solid green;}*/
-	
+
 #labtopresumewidth {
 		margin-left: 1vw;
 		overflow: hidden;
 	}
-	
-	
-	
-#totop 
+
+
+
+#totop
 	{display: none;}
-	
+
 h4.email h5{
 	position: relative;
 	margin: auto;
@@ -791,8 +822,8 @@ h4.email h5{
 h4.email a{
     margin-left: 0px;
   }
-	
-	
+
+
   h4.linkedin{
     margin-right: 0%;
 	transition: all .1s ease-in-out;
@@ -807,23 +838,23 @@ h4.email a{
   h4.instagram{
     margin-right: 0%;
 	/*transition: all .1s ease-in-out;*/
-  }	
-	
+  }
+
 
 .container_one.contactpage{
     overflow: hidden;
     display: block;
 	height: 85vh;
 
-	}	
-	
+	}
+
   .container_two.contact{
     width: 100%;
     margin-left: 0%;
   }
-	
+
 .img_contact{
 	transform: scale(1.9);
 	right: 0;
-	}	
+	}
 }
