left hamburger instead of right

--- a/stylesheet/hamburger.css
+++ b/stylesheet/hamburger.css
@@ -15,12 +15,12 @@
 	  transform: rotate(90deg);
 	}
 	#menu__toggle:checked ~ .menu__box {
-	  right: 0 !important;
+	  left: 0 !important;
 	}
 	.menu__btn {
 	  position: fixed;
 	  top: 8%;
-	  right: 5%;
+	  left: 5%;
 	  width: 50px;
 	  height: 50px;
 	  cursor: pointer;
@@ -49,7 +49,7 @@
 	  display: block;
 	  position: fixed;
 	  top: 0;
-	  right: -100%;
+	  left: -100%;
 	  width: 23vw;
 	  height: 100vh;
 	  margin: 0;
@@ -64,7 +64,7 @@
 
 	.menu__item {
 	  display: block;
-	  padding: 15px 24px;
+	  padding: 50px 50px 50px 5vw;
 	  color: #333;
 	  font-family: 'Roboto', sans-serif;
 	  font-size: 18px;
@@ -109,7 +109,7 @@
 	  display: block;
 	  position: fixed;
 	  top: 0;
-	  right: -100%;
+	  left: -100%;
 	  width: 55vw;
 	  height: 100vh;
 	  margin: 0;
@@ -122,6 +122,6 @@
 		z-index: 8888;
 	}
 	.menu__btn {
-	  right: 6%;
+	  left: 6%;
 	}
 }
