--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -397,6 +397,14 @@
   visibility: visible;
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
+	z-index: 100;
+	width: 50%;
+	height: 70%;
+	position: fixed;
+	margin: auto;
+	opacity: .8;
+	margin-left: 25%;
+	margin-bottom: 5%;
 }
 
 /* Add animation (fade in the popup) */
@@ -411,7 +419,6 @@
 }
 
 /* end of popup */
-
 
 
 
@@ -1267,6 +1274,7 @@ h4.email a{
     height: auto;
     animation: cloud2 100s linear;
 	}
+	
 	@keyframes cloud2{from {left: -67vw;} to {left: 100vw;}} @-webkit-keyframes cloud2{
 	0% {left: -67vw;}
 	100% {left: 100vw;}
@@ -1283,7 +1291,7 @@ h4.email a{
     animation: cloud3 500s linear;
   }
 
-	@keyframes cloud3{
+	@keyframes cloud3 {
 		0% {right: 0%;}
 		100% {right: -100vw;}
 	}
