new file for threegrid popup A and B

--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -16,10 +16,15 @@
 	height: auto;
 	}
 
+  .threecoloumntables {
+		width:850px;
+		margin-left: auto;
+		margin-right: auto;
+		}
+
 	.threebythreegrid {overflow:hidden;
  width: 33%;
  border: 5px solid #ffffff;
-
 	}
 
 	.portfolio_images-mobile {
@@ -349,78 +354,6 @@
     width: 90%;
   }
 }
-
-
-/* pop up starts */
-/* Popup container - can be anything you want */
-.popup {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* The actual popup */
-.popup .popuptext {
-  visibility: hidden;
-  width: 50vw;
-  background-color: #555;
-  color: #000;
-  text-align: center;
-  border-radius: 6px;
-  padding: 8px 0;
-  position: absolute;
-  z-index: 1000;
-  bottom: 1%;
-  left: 1%;
-  margin-left: -80px;
-	overflow: visible;
-}
-
-/* Popup arrow */
-.popup .popuptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
-
-/* Toggle this class - hide and show the popup */
-.popup .show {
-  visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s;
-	z-index: 100;
-	width: 50%;
-	height: 70%;
-	position: fixed;
-	margin: auto;
-	opacity: .8;
-	margin-left: 25%;
-	margin-bottom: 5%;
-}
-
-/* Add animation (fade in the popup) */
-@-webkit-keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity:1 ;}
-}
-
-/* end of popup */
-
-
 
 
 /*laptop */
@@ -1274,7 +1207,7 @@ h4.email a{
     height: auto;
     animation: cloud2 100s linear;
 	}
-	
+
 	@keyframes cloud2{from {left: -67vw;} to {left: 100vw;}} @-webkit-keyframes cloud2{
 	0% {left: -67vw;}
 	100% {left: 100vw;}
